--- a/al_yaqeen/ui/templates/registration/login.html
+++ b/al_yaqeen/ui/templates/registration/login.html
@@ -10,7 +10,7 @@
   <div class="card mx-2 max-w-md w-full rounded-box bg-base-200">
     <div class="card-body gap-8">
       <h1 class="text-4xl font-black text-center font-serif text-primary">
-        {% trans 'Al yaqeen' %}
+        {% trans 'Al Yaqeen' %}
       </h1>
 
       <div class="grid gap-4">
