--- a/al_yaqeen/ui/templates/registration/password_change_form.html
+++ b/al_yaqeen/ui/templates/registration/password_change_form.html
@@ -1,34 +1,27 @@
-<!-- prettier ignore -->
 {% extends "registration/base.html" %}{% load i18n %}
 
-<!-- prettier ignore -->
+<!---->
 {% block title %}{{ block.super }} | {% trans 'Password Change' %}{% endblock %}
 
-<!-- prettier ignore -->
-{% block sidebar_styles %} hidden lg:block{% endblock %}
-
-<!-- prettier ignore -->
-{% block content_styles %}{% endblock %}
-
-<!-- prettier ignore -->
+<!---->
 {% block breadcrumbs %}
 <li>{% trans 'Password' %}</li>
 <li>{% trans 'Change' %}</li>
 {% endblock %}
 
-<!-- prettier ignore -->
+<!---->
 {% block main_content %}
 <section class="grid gap-8">
-  <h1 class="text-3xl font-black">{% trans 'Change password' %}</h1>
+  <h1 class="text-primary text-xl font-semibold lg:text-4xl">
+    {% trans 'Change password' %}
+  </h1>
 
   <p>
-    <!-- prettier ignore -->
-    {% blocktranslate %}Please enter your old password, for security's sake,
+    {% blocktrans trimmed %}Please enter your old password, for security's sake,
     and then enter your new password twice so we can verify you typed it in
-    correctly.{% endblocktranslate %}
+    correctly.{% endblocktrans %}
   </p>
 
-  <!-- prettier ignore -->
   {% include 'ui/components/form.html' %}
 </section>
 {% endblock %}
