--- a/al_yaqeen/ui/templates/registration/password_reset_confirm.html
+++ b/al_yaqeen/ui/templates/registration/password_reset_confirm.html
@@ -1,37 +1,34 @@
-<!-- prettier ignore -->
 {% extends "registration/base.html" %}{% load i18n %}
 
-<!-- prettier ignore -->
-{% block title %}{{ block.super }} | {% trans 'Password Reset Confirm' %}{% endblock %}
+<!---->
+{% block title %}{% trans 'Password Reset Confirm' %}{% endblock %}
 
-<!-- prettier ignore -->
-{% block main %}
+<!---->
+{% block content %}
 <section
   class="flex col-span-12 size-full items-center justify-center rounded-box bg-base-100 lg:p-40"
 >
   <div
     class="card gap-4 mx-2 max-w-md card-body w-full rounded-box bg-base-200"
   >
-    <h1 class="text-3xl font-black">
+    <h1 class="text-primary text-xl font-semibold lg:text-4xl">
       {% trans 'Password Reset Confirmation' %}
     </h1>
 
-    <!-- prettier ignore -->
     {% if validlink %}
     <p>
-      <!-- prettier ignore -->
-      {% trans 'Please enter your new password twice so we can verify you typed it in correctly.' %}
+      {% blocktrans trimmed %}Please enter your new password twice so we can
+      verify you typed it in correctly.{% endblocktrans %}
     </p>
-    <!-- prettier ignore -->
     {% include 'ui/components/form.html' %}
-    <!-- prettier ignore -->
+    <!---->
     {% else %}
     <p>
-      <!-- prettier ignore -->
-      {% blocktranslate %}The password reset link was invalid, possibly because
-      it has already been used. Please request a new password reset.{% endblocktranslate %}
+      {% blocktrans trimmed %}The password reset link was invalid, possibly
+      because it has already been used. Please request a new password reset.
+      <!---->
+      {% endblocktrans %}
     </p>
-    <!-- prettier ignore -->
     {% endif %}
   </div>
 </section>
