--- a/al_yaqeen/ui/templates/rest_framework/api.html
+++ b/al_yaqeen/ui/templates/rest_framework/api.html
@@ -1,134 +1,78 @@
-<!-- prettier ignore -->
-{% extends 'rest_framework/base.html' %}{% load i18n static %}
+{% extends 'rest_framework/base.html' %}{% load i18n %}
 
-<!-- prettier ignore -->
+<!---->
 {% block title %}{% trans 'Al Yaqeen' %} | API | {{ name }}{% endblock %}
 
-<!-- prettier ignore -->
-{% block theme %}silk{% endblock %}
+<!---->
+{% block theme %}luxury{% endblock %}
+<!---->
+{% block theme_selector %}{% endblock %}{% block toggle_theme %}silk{% endblock %}
 
-<!-- prettier ignore -->
-{% block theme_selector %}{% endblock %}{% block toggle_theme %}luxury{% endblock %}
-
-<!-- prettier ignore -->
+<!---->
 {% block branding %}
-<li class="tooltip tooltip-right tooltip-primary" data-tip="{% trans 'Al Yaqeen' %} - API">
+<li
+  class="tooltip tooltip-right rtl:tooltip-left tooltip-primary"
+  data-tip="{% trans 'Al Yaqeen' %} - API"
+>
   <a href="/api/" class="btn btn-square btn-primary lg:btn-lg">
-    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-      stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-      class="lucide lucide-school-icon lucide-school lg:size-8">
-      <path d="M14 22v-4a2 2 0 1 0-4 0v4" />
-      <path
-        d="m18 10 3.447 1.724a1 1 0 0 1 .553.894V20a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2v-7.382a1 1 0 0 1 .553-.894L6 10" />
-      <path d="M18 5v17" />
-      <path d="m4 6 7.106-3.553a2 2 0 0 1 1.788 0L20 6" />
-      <path d="M6 5v17" />
-      <circle cx="12" cy="9" r="2" />
-    </svg>
-
+    <i data-lucide="school" class="size-4 lg:size-6"></i>
     <span class="sr-only"> {% trans 'Al Yaqeen' %} - API </span>
   </a>
 </li>
 {% endblock %}
 
-<!-- prettier ignore -->
+<!---->
 {% block branding_text %}
 <h1 class="hidden text-xl font-semibold text-primary lg:block">
   {% trans 'Al Yaqeen' %}
 </h1>
 {% endblock %}
 
-<!-- prettier ignore -->
+<!---->
 {% block userlinks %}
-<li class="tooltip tooltip-right tooltip-secondary" data-tip="{% trans 'Home' %}">
-  <a href="{% url 'ui:home' %}" class="btn btn-sm btn-square btn-ghost lg:btn-md">
-    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-      stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-house size-4 lg:size-6">
-      <path d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8" />
-      <path
-        d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z" />
-    </svg>
-
+<li
+  class="tooltip tooltip-right rtl:tooltip-left tooltip-secondary"
+  data-tip="{% trans 'Home' %}"
+>
+  <a
+    href="{% url 'ui:home' %}"
+    class="btn btn-sm btn-square btn-ghost lg:btn-md"
+  >
+    <i data-lucide="house" class="size-4 lg:size-6"></i>
     <span class="sr-only">{% trans 'Home' %}</span>
   </a>
 </li>
-<li class="tooltip tooltip-right tooltip-secondary" data-tip="{% trans 'Courses' %}">
-  <a href="{% url 'ui:home' %}" class="btn btn-sm btn-square btn-ghost lg:btn-md">
-    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-      stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-      class="lucide lucide-library-icon lucide-library size-4 lg:size-6">
-      <path d="m16 6 4 14" />
-      <path d="M12 6v14" />
-      <path d="M8 8v12" />
-      <path d="M4 4v16" />
-    </svg>
-
-    <span class="sr-only">{% trans 'Courses' %}</span>
+<li
+  class="tooltip tooltip-right rtl:tooltip-left tooltip-secondary"
+  data-tip="{% trans 'Categories' %}"
+>
+  <a href="/api/categories" class="btn btn-sm btn-square btn-ghost lg:btn-md">
+    <i data-lucide="library" class="size-4 lg:size-6"></i>
+    <span class="sr-only">{% trans 'Categories' %}</span>
   </a>
 </li>
-<li class="tooltip tooltip-right tooltip-secondary" data-tip="{% trans 'Learning paths' %}">
-  <a href="{% url 'ui:home' %}" class="btn btn-sm btn-square btn-ghost lg:btn-md">
-    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-      stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-      class="lucide lucide-route-icon lucide-route size-4 lg:size-6">
-      <circle cx="6" cy="19" r="3" />
-      <path d="M9 19h8.5a3.5 3.5 0 0 0 0-7h-11a3.5 3.5 0 0 1 0-7H15" />
-      <circle cx="18" cy="5" r="3" />
-    </svg>
-
-    <span class="sr-only">{% trans 'Learning paths' %}</span>
-  </a>
-</li>
-<li class="tooltip tooltip-right tooltip-secondary" data-tip="{% trans 'News' %}">
-  <a href="{% url 'ui:home' %}" class="btn btn-sm btn-square btn-ghost lg:btn-md">
-    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-      stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-      class="lucide lucide-scroll-text-icon lucide-scroll-text size-4 lg:size-6">
-      <path d="M15 12h-5" />
-      <path d="M15 8h-5" />
-      <path d="M19 17V5a2 2 0 0 0-2-2H4" />
-      <path
-        d="M8 21h12a2 2 0 0 0 2-2v-1a1 1 0 0 0-1-1H11a1 1 0 0 0-1 1v1a2 2 0 1 1-4 0V5a2 2 0 1 0-4 0v2a1 1 0 0 0 1 1h3" />
-    </svg>
-
-    <span class="sr-only">{% trans 'News' %}</span>
+<li
+  class="tooltip tooltip-right rtl:tooltip-left tooltip-secondary"
+  data-tip="{% trans 'Articles' %}"
+>
+  <a href="/api/articles" class="btn btn-sm btn-square btn-ghost lg:btn-md">
+    <i data-lucide="route" class="size-4 lg:size-6"></i>
+    <span class="sr-only">{% trans 'Articles' %}</span>
   </a>
 </li>
 {% endblock %}
 
-<!-- prettier ignore -->
+<!---->
 {% block profile_menu %}
-<!-- prettier ignore -->
+<!---->
 {% if request.user.is_authenticated %}
 <li>
   <a href="/api/users/me" class="flex items-center gap-4">
-    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-      stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-      class="lucide lucide-circle-user size-4 lg:size-6">
-      <circle cx="12" cy="12" r="10" />
-      <circle cx="12" cy="10" r="3" />
-      <path d="M7 20.662V19a2 2 0 0 1 2-2h6a2 2 0 0 1 2 2v1.662" />
-    </svg>
+    <i data-lucide="circle-user" class="size-4 lg:size-6"></i>
 
     <span>{% trans 'Profile' %}</span>
   </a>
 </li>
-<!-- prettier ignore -->
-{% if request.user.is_instructor %}
-<li>
-  <a href="/dashboard/" class="flex items-center gap-4">
-    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-      stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-      class="lucide lucide-layout-dashboard-icon lucide-layout-dashboard size-4 lg:size-6">
-      <rect width="7" height="9" x="3" y="3" rx="1" />
-      <rect width="7" height="5" x="14" y="3" rx="1" />
-      <rect width="7" height="9" x="14" y="12" rx="1" />
-      <rect width="7" height="5" x="3" y="16" rx="1" />
-    </svg>
-
-    <span>{% trans 'Dashboard' %}</span>
-  </a>
-</li>
 {% endif %}
-{% endif %}
+<!---->
 {% endblock %}
