--- a/al_yaqeen/ui/templates/registration/base.html
+++ b/al_yaqeen/ui/templates/registration/base.html
@@ -1,47 +1,74 @@
-<!-- prettier ignore -->
 {% extends "ui/base.html" %}{% load i18n %}
 
-<!-- prettier ignore -->
-{% block title %}{{ block.super }} | {% trans 'Profile' %}{% endblock %}
+<!---->
+{% block title %}{% trans 'Profile' %}{% endblock %}
 
-<!-- prettier ignore -->
-{% block content_styles %} hidden lg:block{% endblock %}
+<div class="alert-success hidden"></div>
 
-<!-- prettier ignore -->
-{% block searchbar %}{% endblock %}
+<!---->
+{% block content %}
+<div class="drawer drawer-end">
+  <input id="profile-drawer" type="checkbox" class="drawer-toggle sr-only" />
 
-<div class="hidden lg:h-[calc(100dvh-1rem)] lg:max-h-[calc(100dvh-1rem)]"></div>
-
-<!-- prettier ignore -->
-{% block sidebar_height %}lg:h-[calc(100dvh-1rem)] lg:max-h-[calc(100dvh-1rem)]{% endblock %}
-<!-- prettier ignore -->
-{% block content_height %}lg:h-[calc(100dvh-1rem)] lg:max-h-[calc(100dvh-1rem)]{% endblock %}
-
-<!-- prettier ignore -->
-{% block sidebar %}
-<section class="relative flex h-full flex-col gap-6 rounded-box">
-  <header class="absolute inset-x-0 top-0 z-10">
-    <nav
-      class="flex items-center justify-between p-4 gap-4 backdrop-blur-3xl rounded-box"
-    >
-      <h1 class="text-xl font-semibold">{% trans 'Profile' %}</h1>
-    </nav>
-  </header>
-
-  <main
-    class="grid grow gap-4 size-full p-4 pt-20 max-h-[calc(100dvh-1rem)] overflow-y-auto"
-  >
-    <nav class="menu menu-vertical gap-2 w-full justify-between p-0">
-      <ul class="menu menu-vertical gap-2 w-full p-0">
-        <li
-          class="tooltip tooltip-bottom tooltip-primary"
-          data-tip="{% trans 'My Profile' %}"
+  <div class="drawer-content">
+    <div class="container max-w-xl mx-auto px-2 pb-16 lg:px-4">
+      <section class="relative size-full">
+        <main
+          class="flex flex-col gap-4 size-full max-h-[calc(100dvh-1rem)] lg:gap-6"
         >
-          <a
-            href="{% url 'ui:profile' %}"
-            class="btn btn-ghost justify-between gap-4 w-full"
+          <nav class="flex items-center gap-4">
+            <div
+              class="tooltip tooltip-right tooltip-primary rtl:tooltip-left"
+              data-tip="{% trans 'Open drawer' %}"
+            >
+              <label
+                for="profile-drawer"
+                aria-label="{% trans 'Open drawer' %}"
+                class="btn btn-sm btn-square btn-soft btn-primary lg:btn-md"
+              >
+                <i data-lucide="menu" class="size-4 lg:size-6"></i>
+                <span class="sr-only">{% trans 'Open drawer' %}</span>
+              </label>
+            </div>
+            <div class="breadcrumbs p-0">
+              <ol>
+                <li>
+                  <a href="{% url 'ui:profile' %}">{% trans 'Profile' %}</a>
+                </li>
+                {% block breadcrumbs %}{% endblock %}
+              </ol>
+            </div>
+          </nav>
+          <!---->
+          {% include 'ui/components/messages.html' %}
+
+          <!---->
+          {% block main_content %}{% endblock %}
+        </main>
+      </section>
+    </div>
+  </div>
+
+  <div class="drawer-side z-50">
+    <label
+      for="profile-drawer"
+      aria-label="{% trans 'Close drawer' %}"
+      class="drawer-overlay"
+    ></label>
+
+    <section
+      class="m-1 flex h-full max-h-[calc(100dvh-0.5rem)] w-full max-w-[calc(100dvw-0.5rem)] flex-col justify-between overflow-hidden rounded-box bg-base-100 backdrop-blur-3xl sm:w-10/12 md:w-8/12 lg:m-2 lg:max-h-[calc(100dvh-1rem)] lg:w-1/3 lg:max-w-[calc(100dvw-1rem)] lg:rounded-r-box xl:w-1/4"
+    >
+      <header class="flex items-center justify-between gap-4 p-4">
+        <div class="flex items-center gap-4">
+          <div
+            class="tooltip tooltip-right rtl:tooltip-left tooltip-primary"
+            data-tip="{% trans 'Al-Yaqeen' %}"
           >
-            <div class="flex items-center gap-4">
+            <a
+              href="{% url 'ui:home' %}"
+              class="btn btn-square btn-lg btn-primary"
+            >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="24"
@@ -52,199 +79,100 @@
                 stroke-width="2"
                 stroke-linecap="round"
                 stroke-linejoin="round"
-                class="lucide lucide-user size-4 lg:size-6"
+                class="lucide lucide-feather-text-icon lucide-feather-text size-8"
               >
-                <path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2" />
-                <circle cx="12" cy="7" r="4" />
+                <path d="M17.9 8H9.2" />
+                <path d="M5.1 12H14l8-8.2c-2.3-2.3-6.1-2.3-8.5 0L2 15" />
+                <path d="M2 19h8" />
+                <path
+                  d="M21 17v1c0 1 1 1.5 1 2.5 0 .8-.7 1.5-1.5 1.5h-5c-.8 0-1.5-.7-1.5-1.5 0-1 1-1.5 1-2.5v-1"
+                />
+                <path d="M14 17h8" />
               </svg>
+              <span class="sr-only">{% trans 'Al-Yaqeen' %}</span>
+            </a>
+          </div>
 
-              <span>{% trans 'Profile' %}</span>
-            </div>
+          <h1 class="text-xl font-bold text-primary">{% trans 'Profile' %}</h1>
+        </div>
 
-            <!-- prettier ignore -->
-            {% if request.user.is_instructor %}
-            <span class="badge badge-primary"> {% trans 'Instructor' %} </span>
-            {% endif %}
-          </a>
-        </li>
-        <!-- prettier ignore -->
-        {% if request.user.is_instructor %}
-        <li
-          class="tooltip tooltip-bottom"
-          data-tip="{% trans 'Dashboard' %}"
+        <div
+          class="tooltip tooltip-left rtl:tooltip-right hover:tooltip-error"
+          data-tip="{% trans 'Close' %}"
         >
-          <a
-            href="/dashboard/"
-            class="btn btn-ghost justify-start gap-4 w-full"
+          <label
+            for="profile-drawer"
+            aria-label="{% trans 'Close drawer' %}"
+            class="btn btn-square btn-soft btn-sm btn-primary hover:btn-error lg:btn-md"
           >
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              stroke="currentColor"
-              stroke-width="2"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              class="lucide lucide-layout-dashboard-icon lucide-layout-dashboard size-4 lg:size-6"
-            >
-              <rect width="7" height="9" x="3" y="3" rx="1" />
-              <rect width="7" height="5" x="14" y="3" rx="1" />
-              <rect width="7" height="9" x="14" y="12" rx="1" />
-              <rect width="7" height="5" x="3" y="16" rx="1" />
-            </svg>
+            <i data-lucide="x" class="size-4 lg:size-6"></i>
+            <span class="sr-only">{% trans 'Close' %}</span>
+          </label>
+        </div>
+      </header>
 
-            <span>{% trans 'Dashboard' %}</span>
-          </a>
-        </li>
-        {% endif %}
-        <li
-          class="tooltip tooltip-bottom"
-          data-tip="{% trans 'Edit account' %}"
-        >
-          <a
-            href="{% url 'ui:u-user' request.user.id %}"
-            class="btn btn-ghost justify-start gap-4 w-full"
-          >
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              stroke="currentColor"
-              stroke-width="2"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              class="lucide lucide-user-pen-icon lucide-user-pen size-4 lg:size-6"
-            >
-              <path d="M11.5 15H7a4 4 0 0 0-4 4v2" />
-              <path
-                d="M21.378 16.626a1 1 0 0 0-3.004-3.004l-4.01 4.012a2 2 0 0 0-.506.854l-.837 2.87a.5.5 0 0 0 .62.62l2.87-.837a2 2 0 0 0 .854-.506z"
-              />
-              <circle cx="10" cy="7" r="4" />
-            </svg>
-
-            <span>{% trans 'Edit account' %}</span>
-          </a>
-        </li>
-        <li
-          class="tooltip tooltip-bottom"
-          data-tip="{% trans 'Change Password' %}"
-        >
-          <a
-            href="{% url 'ui:password_change' %}"
-            class="btn btn-ghost justify-start gap-4 w-full"
-          >
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              stroke="currentColor"
-              stroke-width="2"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              class="lucide lucide-rotate-ccw-key-icon lucide-rotate-ccw-key size-4 lg:size-6"
-            >
-              <path d="m14.5 9.5 1 1" />
-              <path d="m15.5 8.5-4 4" />
-              <path d="M3 12a9 9 0 1 0 9-9 9.74 9.74 0 0 0-6.74 2.74L3 8" />
-              <path d="M3 3v5h5" />
-              <circle cx="10" cy="14" r="2" />
-            </svg>
-
-            <span>{% trans 'Change Password' %}</span>
-          </a>
-        </li>
-      </ul>
-
-      <ul class="menu menu-vertical gap-2 w-full p-0">
-        <li
-          class="tooltip tooltip-top tooltip-error"
-          data-tip="{% trans 'Delete account' %}"
-        >
-          <a
-            href="{% url 'ui:d-user' request.user.id %}"
-            class="btn btn-soft btn-error justify-start gap-4 w-full"
-          >
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              stroke="currentColor"
-              stroke-width="2"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              class="lucide lucide-user-x-icon lucide-user-x size-4 lg:size-6"
-            >
-              <path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2" />
-              <circle cx="9" cy="7" r="4" />
-              <line x1="17" x2="22" y1="8" y2="13" />
-              <line x1="22" x2="17" y1="8" y2="13" />
-            </svg>
-
-            <span>{% trans 'Delete account' %}</span>
-          </a>
-        </li>
-        <li class="tooltip tooltip-top" data-tip="{% trans 'Logout' %}">
-          <button
-            form="logout-form"
-            type="submit"
-            class="btn btn-ghost justify-start gap-4 w-full"
-          >
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              stroke="currentColor"
-              stroke-width="2"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              class="lucide lucide-log-out size-4 lg:size-6"
-            >
-              <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4" />
-              <polyline points="16 17 21 12 16 7" />
-              <line x1="21" x2="9" y1="12" y2="12" />
-            </svg>
-
-            <span>{% trans 'Logout' %}</span>
-          </button>
-        </li>
-      </ul>
-    </nav>
-  </main>
-</section>
-{% endblock %}
-
-<!-- prettier ignore -->
-{% block content %}
-<section class="relative size-full">
-  <header class="absolute inset-x-0 top-0 z-10">
-    <nav class="flex items-center p-4 gap-4 backdrop-blur-3xl rounded-box">
-      <div class="breadcrumbs p-0">
-        <ol>
+      <nav class="menu menu-vertical gap-2 size-full justify-between p-4">
+        <ul class="menu menu-vertical gap-2 w-full p-0">
           <li>
-            <a href="{% url 'ui:profile' %}"> {% trans 'Profile' %} </a>
+            <a
+              href="{% url 'ui:profile' %}"
+              class="btn btn-ghost justify-between gap-4 w-full"
+            >
+              <div class="flex items-center gap-4">
+                <i data-lucide="user" class="size-4 lg:size-6"></i>
+                <span>{% trans 'Profile' %}</span>
+              </div>
+              {% if request.user.is_staff %}
+              <span class="badge badge-primary"> {% trans 'Admin' %} </span>
+              {% endif %}
+            </a>
           </li>
-          {% block breadcrumbs %}{% endblock %}
-        </ol>
-      </div>
-    </nav>
-  </header>
+          <li>
+            <a
+              href="{% url 'ui:u-user' request.user.id %}"
+              class="btn btn-ghost justify-start gap-4 w-full"
+            >
+              <i data-lucide="user-cog" class="size-4 lg:size-6"></i>
+              <span>{% trans 'Settings' %}</span>
+            </a>
+          </li>
+          <li>
+            <a
+              href="{% url 'ui:password_change' %}"
+              class="btn btn-ghost justify-start gap-4 w-full"
+            >
+              <i data-lucide="rotate-ccw-key" class="size-4 lg:size-6"></i>
+              <span>{% trans 'Change Password' %}</span>
+            </a>
+          </li>
+        </ul>
 
-  <main class="size-full p-4 pt-16 max-h-[calc(100dvh-1rem)] overflow-y-auto">
-    <!-- prettier ignore -->
-    {% include 'ui/components/messages.html' %}
-
-    <!-- prettier ignore -->
-    {% block main_content %}{% endblock %}
-  </main>
-</section>
+        <ul class="mt-auto menu menu-vertical gap-2 w-full p-0">
+          <li>
+            <a
+              href="{% url 'ui:d-user' request.user.id %}"
+              class="btn btn-soft btn-error justify-start gap-4 w-full"
+            >
+              <i data-lucide="user-x" class="size-4 lg:size-6"></i>
+              <span>{% trans 'Delete account' %}</span>
+            </a>
+          </li>
+          <li>
+            <button
+              form="logout-form"
+              type="submit"
+              class="btn btn-ghost justify-start gap-4 w-full"
+            >
+              <i data-lucide="log-out" class="size-4 lg:size-6"></i>
+              <span>{% trans 'Log out' %}</span>
+            </button>
+          </li>
+        </ul>
+      </nav>
+    </section>
+  </div>
+</div>
 {% endblock %}
+
+<!---->
+{% block footer %}{% endblock %}
