--- a/al_yaqeen/ui/templates/registration/password_reset_done.html
+++ b/al_yaqeen/ui/templates/registration/password_reset_done.html
@@ -1,29 +1,29 @@
-<!-- prettier ignore -->
 {% extends "registration/base.html" %}{% load i18n %}
 
-<!-- prettier ignore -->
-{% block title %}{{ block.super }} | {% trans 'Password Reset Done' %}{% endblock %}
+<!---->
+{% block title %}{% trans 'Password Reset Done' %}{% endblock %}
 
-<!-- prettier ignore -->
-{% block main %}
+<!---->
+{% block content %}
 <section
   class="flex col-span-12 size-full items-center justify-center rounded-box bg-base-100 lg:p-40"
 >
   <div
     class="card gap-4 mx-2 max-w-md card-body w-full rounded-box bg-base-200"
   >
-    <h1 class="text-3xl font-black">{% trans 'Password Reset Done' %}</h1>
+    <h1 class="text-primary text-xl font-semibold lg:text-4xl">
+      {% trans 'Password Reset Done' %}
+    </h1>
 
     <p>
-      <!-- prettier ignore -->
-      {% blocktranslate %}We've emailed you instructions for setting your
+      {% blocktrans trimmed %}We've emailed you instructions for setting your
       password, if an account exists with the email you entered. You should
-      receive them shortly.{% endblocktranslate %}
+      receive them shortly.{% endblocktrans %}
     </p>
     <p>
-      <!-- prettier ignore -->
-      {% blocktranslate %}If you don't receive an email, please make sure you've
-      entered the address you registered with, and check your spam folder.{% endblocktranslate %}
+      {% blocktrans trimmed %}If you don't receive an email, please make sure
+      you've entered the address you registered with, and check your spam
+      folder. {% endblocktrans %}
     </p>
 
     <a href="{% url 'ui:index' %}" class="btn btn-primary">
