--- a/al_yaqeen/ui/templates/registration/password_reset_form.html
+++ b/al_yaqeen/ui/templates/registration/password_reset_form.html
@@ -1,25 +1,25 @@
-<!-- prettier ignore -->
 {% extends "registration/base.html" %}{% load i18n %}
 
-<!-- prettier ignore -->
+<!---->
 {% block title %}{{ block.super }} | {% trans 'Password Reset' %}{% endblock %}
 
-<!-- prettier ignore -->
-{% block main %}
+<!---->
+{% block content %}
 <section
   class="flex col-span-12 size-full items-center justify-center rounded-box bg-base-100 lg:p-40"
 >
   <div
     class="card gap-4 mx-2 max-w-md card-body w-full rounded-box bg-base-200"
   >
-    <h1 class="text-3xl font-black">{% trans 'Reset Password' %}</h1>
+    <h1 class="text-primary text-xl font-semibold lg:text-4xl">
+      {% trans 'Reset Password' %}
+    </h1>
 
     <p>
-      <!-- prettier ignore -->
-      {% trans "Forgotten your password? Enter your email address below, and we'll email instructions for setting a new one." %}
+      {% blocktrans trimmed %}Forgotten your password? Enter your email address
+      below, and we'll email instructions for setting a new one.{% endblocktrans %}
     </p>
 
-    <!-- prettier ignore -->
     {% include 'ui/components/form.html' %}
   </div>
 </section>
