--- a/al_yaqeen/ui/templates/ui/articles/archive/year.html
+++ b/al_yaqeen/ui/templates/ui/articles/archive/year.html
@@ -1,7 +1,7 @@
 {% extends 'ui/base.html' %}{% load i18n wagtailimages_tags %}
 
 <!---->
-{% block title %}{% trans 'News' %}{% endblock %}
+{% block title %}{% trans 'Yearly Article Archive' %}{% endblock %}
 
 <!---->
 {% block content %}
@@ -9,14 +9,13 @@
   <div class="hero min-h-96">
     <div class="hero-content">
       <h1 class="text-primary text-2xl font-black lg:text-5xl">
-        {% if request.GET.is_breaking %}{% trans 'Breaking News' %}{% else %}
-        {% trans 'Latest News' %}{% endif %}
+        {% trans 'Article Archive' %}
       </h1>
     </div>
   </div>
 
   <div class="rounded-box grid grid-cols-12 overflow-hidden">
-    {% for article in article_list %}
+    {% for article in latest %}
     <div
       id="{{ article.slug }}"
       class="col-span-12 md:col-span-6 lg:col-span-4 xl:col-span-3"
@@ -74,6 +73,20 @@
         </article>
       </div>
     </div>
+    {% endfor %}
+  </div>
+
+  <!-- Use this instead -->
+  <ul>
+    {% for date in date_list %}
+    <li>{{ date|date }}</li>
+    {% endfor %}
+  </ul>
+
+  <div>
+    <h1>All Articles for {{ year|date:"Y" }}</h1>
+    {% for obj in object_list %}
+    <p>{{ obj.title }} - {{ obj.pub_date|date:"F j, Y" }}</p>
     {% endfor %}
   </div>
 </section>
