--- a/al_yaqeen/ui/templates/ui/components/messages.html
+++ b/al_yaqeen/ui/templates/ui/components/messages.html
@@ -1,11 +1,11 @@
 {% if messages %}
 <ol class="list">
   {% for message in messages %}
-  <li class="list-row alert alert-{{message.tags}}">
+  <li class="list-row alert alert-{{ message.tags }}">
     <div>
-      <span class="badge badge-soft badge-{{message.tags}} font-semibold"
-        >{{ message.tags|upper }}</span
-      >
+      <span class="badge badge-soft badge-{{ message.tags }} font-semibold">
+        {{ message.tags|upper }}
+      </span>
     </div>
     <div>
       <p>{{ message }}</p>
