--- a/al_yaqeen/ui/templates/ui/index.html
+++ b/al_yaqeen/ui/templates/ui/index.html
@@ -1,31 +1,268 @@
-<!-- prettier ignore -->
-{% extends 'ui/base.html' %}{% load i18n %}
+{% extends 'ui/base.html' %}{% load i18n wagtailimages_tags %}
 
-<!-- prettier ignore -->
+<!---->
 {% block title %}{% trans 'Al Yaqeen' %}{% endblock %}
 
-<!-- prettier ignore -->
-{% block nav %}{% endblock %}
+<!---->
+{% block content %}
+<section id="breaking-news">
+  <div class="carousel aspect-video w-full rounded-box lg:max-h-[50rem]">
+    {% for article in breaking_news %}
+    <div id="breaking-{{ article.id }}" class="group carousel-item size-full">
+      <article
+        class="image-full card relative size-full rounded-box card-sm md:card-md lg:card-xl"
+      >
+        <div class="absolute top-4 right-4 z-10">
+          <div
+            class="tooltip tooltip-left tooltip-primary"
+            data-tip="{% trans 'Read' %}"
+          >
+            <a
+              href="{% url 'ui:article' article.slug %}"
+              class="btn btn-circle btn-primary lg:btn-xl"
+            >
+              <i
+                data-lucide="arrow-right"
+                class="size-4 lg:size-6 rtl:rotate-180"
+              ></i>
 
-<!-- prettier ignore -->
-{% block searchbar %}{% endblock %}
+              <span class="sr-only">{% trans 'Read' %}</span>
+            </a>
+          </div>
+        </div>
 
-<!-- prettier ignore -->
-{% block main %}
-<div class="relative col-span-12 size-full">
-  <header class="absolute inset-x-0 top-0 backdrop-blur-3xl rounded-t-box px-4 py-2 shadow-sm">
-    <nav class="flex items-center justify-between">
-      <h1 class="font-bold text-xl">Al-Yaqeen</h1>
+        <figure>{% image article.image scale-100 %}</figure>
 
-      <ul class="menu">
-        <li><a href="{% url 'ui:home' %}">{% trans 'Home' %}</a></li>
-      </ul>
+        <main class="card-body justify-between gap-4 lg:gap-8">
+          <div class="hero grow">
+            <div class="hero-content flex-col gap-4 lg:gap-8">
+              <h1
+                class="card-title font-serif text-2xl font-black text-shadow-lg lg:text-7xl rtl:font-kufi"
+              >
+                {{ article.title }}
+              </h1>
 
-      <ul class="flex items-center gap-4">
-        <li><a href="{% url 'ui:signup' %}" class="btn btn-primary">{% trans 'Sign up' %}</a></li>
-        <li><a href="{% url 'ui:login' %}" class="btn btn-seecondary">{% trans 'Log in' %}</a></li>
-      </ul>
-    </nav>
-  </header>
-</div>
+              <p class="grow-0 text-lg font-light lg:text-2xl">
+                {{ article.headline }}
+              </p>
+            </div>
+          </div>
+
+          <nav class="flex items-center justify-between">
+            <div class="join items-center divide-x-2 divide-base-100">
+              <div
+                class="tooltip tooltip-right rtl:tooltip-left flex tooltip-error"
+                data-tip="{% trans 'Breaking' %}"
+              >
+                <a
+                  href="{% url 'ui:articles' %}?is_breaking=True"
+                  class="relative join-item badge badge-error lg:badge-lg"
+                >
+                  <i data-lucide="podcast" class="size-4 lg:size-6"></i>
+
+                  <span
+                    class="absolute badge aspect-square animate-ping rounded-full badge-xl badge-error"
+                  ></span>
+                  <span class="sr-only">{% trans 'Breaking' %}</span>
+                </a>
+              </div>
+
+              <div
+                class="tooltip tooltip-right rtl:tooltip-left flex tooltip-primary"
+                data-tip="{% trans 'Category' %}"
+              >
+                <a
+                  href="{% url 'ui:category' article.get_parent.slug %}"
+                  class="join-item badge badge-primary text-shadow-lg lg:badge-lg"
+                >
+                  <span>{{ article.get_parent.title }}</span>
+
+                  <i
+                    data-lucide="chevron-right"
+                    class="size-4 lg:size-6 rtl:rotate-180"
+                  ></i>
+                </a>
+              </div>
+            </div>
+
+            <div class="join items-center divide-x-2 divide-base-100">
+              <div
+                class="tooltip tooltip-left rtl:tooltip-right tooltip-primary"
+                data-tip="{% trans 'Swipe left' %}"
+              >
+                <button
+                  class="btn join-item btn-square btn-sm btn-primary md:btn-lg lg:btn-xl"
+                >
+                  <i
+                    data-lucide="chevron-left"
+                    class="size-4 lg:size-6 rtl:rotate-180"
+                  ></i>
+
+                  <span class="sr-only">
+                    {% trans 'Swipe left to view previous' %}
+                  </span>
+                </button>
+              </div>
+
+              <div
+                class="tooltip tooltip-left rtl:tooltip-right tooltip-primary"
+                data-tip="{% trans 'Swipe right' %}"
+              >
+                <button
+                  class="btn join-item btn-square btn-sm btn-primary md:btn-lg lg:btn-xl"
+                >
+                  <i
+                    data-lucide="chevron-right"
+                    class="size-4 lg:size-6 rtl:rotate-180"
+                  ></i>
+
+                  <span class="sr-only">
+                    {% trans 'Swipe right to view the next' %}
+                  </span>
+                </button>
+              </div>
+            </div>
+          </nav>
+        </main>
+      </article>
+    </div>
+    {% endfor %}
+  </div>
+</section>
+
+<section id="latest-news" class="grid gap-6">
+  <div class="flex items-center justify-between gap-4">
+    <h2 class="text-xl font-black text-primary lg:text-2xl">
+      {% trans 'Latest News' %}
+    </h2>
+
+    <div
+      class="tooltip tooltip-left rtl:tooltip-right tooltip-info"
+      data-tip="{% trans 'See all' %}"
+    >
+      <a
+        href="{% url 'ui:articles' %}"
+        class="btn btn-circle btn-soft btn-info lg:btn-lg"
+      >
+        <span class="sr-only">{% trans 'See all' %}</span>
+
+        <i
+          data-lucide="chevron-right"
+          class="size-4 lg:size-6 rtl:rotate-180"
+        ></i>
+      </a>
+    </div>
+  </div>
+
+  <div class="carousel rounded-box">
+    {% for article in latest_news %}
+    <div
+      id="{{ article.slug }}"
+      class="join-vertical carousel-item join w-full border border-transparent hover:border-success active:border-primary md:w-1/2 lg:w-1/3"
+    >
+      <article
+        class="group card relative join-item size-full rounded-none bg-base-200 p-4 hover:bg-primary hover:text-primary-content hover:shadow active:bg-success active:text-success-content lg:card-lg xl:card-xl"
+      >
+        <main class="card-body gap-4 lg:gap-8">
+          <h1
+            class="card-title font-serif text-primary group-hover:text-primary-content rtl:font-kufi"
+          >
+            {{ article.title }}
+          </h1>
+
+          <p>{{ article.headline }}</p>
+
+          <div class="flex items-center justify-between">
+            <span class="badge badge-soft badge-primary">
+              {{ article.created_at|timesince }}
+            </span>
+            <a
+              href="{% url 'ui:category' article.get_parent.slug %}"
+              class="badge badge-soft badge-primary"
+            >
+              <span>{{ article.get_parent.title }}</span>
+
+              <i
+                data-lucide="chevron-right"
+                class="size-4 lg:size-6 rtl:rotate-180"
+              ></i>
+            </a>
+          </div>
+        </main>
+      </article>
+
+      <a
+        href="{% url 'ui:article' article.slug %}"
+        class="btn join-item btn-primary group-hover:btn-success"
+      >
+        {% trans 'Continue reading' %}
+      </a>
+
+      <figure class="join-item">{% image article.image scale-100 %}</figure>
+    </div>
+    {% endfor %}
+  </div>
+</section>
+
+<section id="categories" class="grid gap-6">
+  <div class="flex items-center justify-between gap-4">
+    <h2 class="text-xl font-black text-primary lg:text-2xl">
+      {% trans 'Browse news by category' %}
+    </h2>
+
+    <div
+      class="tooltip tooltip-left rtl:tooltip-right tooltip-info"
+      data-tip="{% trans 'See all' %}"
+    >
+      <a
+        href="{% url 'ui:categories' %}"
+        class="btn btn-circle btn-soft btn-info lg:btn-lg"
+      >
+        <span class="sr-only">{% trans 'See all' %}</span>
+
+        <i
+          data-lucide="chevron-right"
+          class="size-4 lg:size-6 rtl:rotate-180"
+        ></i>
+      </a>
+    </div>
+  </div>
+
+  <div class="carousel rounded-box">
+    {% for category in categories %}
+    <div
+      id="{{ category.slug }}"
+      class="carousel-item w-full md:w-1/2 lg:w-1/3"
+    >
+      <article
+        class="card relative size-full rounded-none bg-base-200 p-4 hover:bg-base-100 lg:card-lg xl:card-xl"
+      >
+        <main class="card-body gap-4 lg:gap-8">
+          <div
+            class="tooltip tooltip-left tooltip-info absolute top-4 right-4 rtl:left-4"
+            data-tip="{% trans 'Article count' %}"
+          >
+            <span class="badge badge-soft badge-info">
+              {{ category.get_children.count }} {% trans 'articles' %}
+            </span>
+          </div>
+
+          <h1 class="card-title font-serif text-primary rtl:font-kufi">
+            {{ category.title }}
+          </h1>
+
+          <div>{{ category.description }}</div>
+
+          <a
+            href="{% url 'ui:category' category.slug %}"
+            class="btn btn-primary"
+          >
+            {% trans 'View all' %}
+          </a>
+        </main>
+      </article>
+    </div>
+    {% endfor %}
+  </div>
+</section>
 {% endblock %}
